Bugfixing login had some issues

--- a/src/main/resources/static/css/cake.css
+++ b/src/main/resources/static/css/cake.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: nunito;
-    src: url('../fonts/Nunito-Regular.ttf');
+    src: url('Nunito-Regular.ttf');
 }
 
 /* Reset */
