--- a/src/main/resources/templates/cake.html
+++ b/src/main/resources/templates/cake.html
@@ -3,6 +3,7 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
     <title>Hello Cake!</title>
+    <link rel="stylesheet" th:href="@{/css/cake.css}">
 </head>
 <body>
 
