--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -30,8 +30,8 @@
     </div>
 
     <form th:action="@{/login}" method="post">
-      <label for="login">Login</label>
-      <input id="login" type="text" name="login"/>
+      <label for="username">Login</label>
+      <input id="username" type="text" name="username"/>
       <label for="password">Password</label>
       <input id="password" name="password" type="password"/>
       <input type="submit" value="Log in"/>
