--- a/src/main/resources/template/cake.html
+++ b/src/main/resources/template/cake.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
-      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,10 +16,6 @@
             <a href="#cake3">Rainbow</a>
         </nav>
     </header>
-
-    <form class="logoutLblPos" th:action="@{/logout}" method="post">
-        <input type="submit" value="Sign Out"/>
-    </form>
 
     <main>
 
