--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="css/cake.css">
+    <link rel="stylesheet" th:href="@{/css/cake.css}">
 </head>
 <body>
     <header>
@@ -17,7 +17,9 @@
             <figure>
                 <img src="img/apple.png" alt="Apple Pie" width="250" height="250">
                 <figcaption class="tiny_cake">Order received</figcaption>
-                <input type="submit" value="Logout"/>
+                <form class="logoutLblPos" th:action="@{/logout}" method="post">
+                    <input type="submit" value="Sign Out"/>
+                </form>
             </figure>
         </article>
     </main>
