--- a/src/main/resources/static/css/cake.css
+++ b/src/main/resources/static/css/cake.css
@@ -220,19 +220,68 @@ input[type=submit]{
     border-radius: 4px;
 }
 
-
 /* small */
 @media screen and (min-width: 576px) {
-    main{
-     justify-content: center;
-     flex-flow: row wrap;
-     padding: 1rem;
-    }
- }
+   main{
+    justify-content: center;
+    flex-flow: row wrap;
+    padding: 1rem;
+   }
 
-@media screen and (max-width: 576px) {
+   .card{
+    width: min(100%, 400px);
+   }
 
-    welcome{
+}
+
+/*medium*/
+@media screen and (min-width: 768px) {
+    nav{
         display: none;
     }
- }
+    .card{
+        width: min(100%, 325px);
+    }
+    .card figure{
+        flex-flow: column-reverse;
+    }
+
+    .card p{
+        margin-top: 1rem;
+    }
+}
+
+/*larg*/
+@media screen and (min-width: 992px) {
+    .card{
+        width: min(100%, 400px);
+    }
+}
+
+/*xl*/
+@media screen and (min-width: 1200px) {
+    .card{
+        width: min(calc(33% - 1rem),500px);
+    }
+}
+
+/*mobil device landscape*/
+@media screen and (max-height: 425px) and (min-apspect-ratio: 7/4)  {
+    h1{
+        font-size: 1.5rem;
+    }
+
+    nav{
+        display: none;
+    }
+
+    main{
+        flex-flow: row nowrap;
+        justify-content: space-evenly;
+        align-items: stretch;
+    }
+
+    .card {
+        width: min(calc(33% - 0.25rem), 200px);
+    }
+}
